chore: update some dependency to avoid security vulnerability
Signed-off-by: TangliziGit <tanglizimail@foxmail.com>